<resources>
    <string name="app_name">Beerry</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="abv_selection">ABV from %1$s to %2$s</string>
    <string name="ibu_selection">IBU from %1$s to %2$s</string>
    <string name="ebc_selection">EBC from %1$s to %2$s</string>
    <string name="no_matches">No such beers!</string>
    <string name="filter">Filter again</string>
    <string name="beer_image_transition_name">beer_image_transition</string>
    <string name="favorite_transition_name">favorite_transition</string>
    <string name="color_transition_name">color_transition</string>
    <string name="title_color">Color</string>
    <string name="title_bitterness">Bitterness</string>
    <string name="title_alcohol_by_volume">Alcohol By Volume (ABV)</string>
    <string name="title_characteristics">Characteristics</string>
    <string name="title_abv">ABV</string>
    <string name="title_ibu">IBU</string>
    <string name="title_ebc">EBC</string>
    <string name="title_fg">Final Gravity (FG)</string>
    <string name="title_og">Original Gravity (OG)</string>
    <string name="title_srm">SRM</string>
    <string name="title_ph">pH</string>
    <string name="title_attenuation_level">Attenuation Level</string>
    <string name="title_volume">Volume</string>
    <string name="title_boil_volume">Boil Volume</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_food_pairing">Food Pairing</string>
    <string name="title_brewers_tips">Brewers Tips</string>
    <string name="title_first_brewed">First Brewed</string>
    <string name="unspecified">Unspecified</string>
    <string name="go_browse">Go browse</string>
    <string name="you_haven_t_added_any_beer_to_favorite">You haven\'t added any beer to favorite!</string>
    <string name="find_your">Find your</string>
    <string name="match">match</string>
    <string name="button_back">Back</string>
    <string name="there_is_no_internet_connection_only_basic_functionality_is_available">There is no internet connection. Only basic functionality is available.</string>
    <string name="you_love">You love</string>
    <string name="it">it</string>

</resources>
