<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/button_expand_characteristics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondarySemitransparent"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/SubtitleStyle"
            android:clickable="false"
            android:focusable="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_characteristics" />

        <ImageView
            android:clickable="false"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/button_expand"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/characteristics_expanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_first_brewed"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_first_brewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_alcohol_by_volume"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_abv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_ibu"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ibu_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_ebc"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ebc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_fg"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_fg_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_og"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_og_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_srm"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_srm_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_ph"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ph_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_attenuation_level"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_attenuation_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_volume"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_volume_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondarySemitransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_boil_volume"
                android:textColor="@android:color/secondary_text_light" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_boil_volume_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>